[project]
name = "prepflow-compiler-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi-cloud-cli>=0.14.0",
    "fastapi[standard]>=0.135.1",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.54.0",
    "uvicorn[standard]>=0.41.0",
]
